--- a/src/main/resources/templates/mypage-6.html
+++ b/src/main/resources/templates/mypage-6.html
@@ -185,14 +185,6 @@
 										수정</a></li>
 								<li class="border-bottom mb-0"><a
 									class="nav-link-style d-flex align-items-center px-4 py-3"
-									th:href="@{/mypage-2}"><i class="ci-edit opacity-60 me-2"></i>입소
-										신청 조회<span class="fs-sm text-muted ms-auto"></span></a></li>
-								<li class="border-bottom mb-0"><a
-									class="nav-link-style d-flex align-items-center px-4 py-3"
-									th:href="@{/mypage-3}"><i class="ci-heart opacity-60 me-2"></i>찜<span
-										class="fs-sm text-muted ms-auto"></span></a></li>
-								<li class="border-bottom mb-0"><a
-									class="nav-link-style d-flex align-items-center px-4 py-3"
 									th:href="@{/mypage-4}"><i class="ci-edit opacity-60 me-2"></i>불편사항
 										신고 조회<span class="fs-sm text-muted ms-auto"></span></a></li>
 								<li class="border-bottom mb-0"><a
@@ -205,11 +197,6 @@
 											class="fs-sm text-muted ms-auto"></span>
 									</div>
 								</li>
-								<li class="border-bottom mb-0"><a
-									class="nav-link-style d-flex align-items-center px-4 py-3"
-									th:href="@{/mypage-7}"><i class="ci-cart opacity-60 me-2"></i>장바구니<span
-										class="fs-sm text-muted ms-auto"></span></a></li>
-								<li class="border-bottom mb-0">
 									<div class="nav-link-style d-flex align-items-center px-4 py-2">
 										<a class="fs-sm ms-auto btn btn-logout btn-sm" th:href="@{/logout}"><i
 											class="ci-sign-out me-2"></i>로그아웃</a>
@@ -294,6 +281,7 @@
 
 
  			<!-- pagination -->
+ 			<th:block th:if="${paylist.size != 0}">
           <nav class="d-flex justify-content-between pt-2" aria-label="Page navigation">
             <ul class="pagination">
               <li class="page-item"><a class="page-link" href="#"><i class="ci-arrow-left me-2"></i>Prev</a></li>
@@ -308,6 +296,7 @@
                     class="ci-arrow-right ms-2"></i></a></li>
             </ul>
           </nav>
+          </th:block>
           </th:block>
           
           
